W-15716727: Update ExtensionModel providers to not use extensions-api internals